# OlivOSAIChatAssassin

./: DATA_PY_FIELD_REFERENCE.md  DEEPSEEK_PROMPT_CACHE_OPTIMIZATION_REPORT.md  README.md  SKILL_MANAGER_V3_REGRESSION_REPORT.md  generate_skill_regression_report.py  pyproject.toml  test_agent_regression.py  test_first_thinking_failopen.py  test_knowledge_cache_limit.py  test_prompt_cache.py  test_real_chat_12_context.py  test_real_queries.py  test_real_skills.py  test_skill_manager_v3_regression.py  test_skill_routing_v2.py  test_skills.py  test_vision_prompt.py
OlivOSAIChatAssassin/: __init__.py  agent.py  app.json  convert_knowledge.py  data.py  load.py  main.py  msg.py  skillManager.py  skillManagerV2.py  skillManagerV3.py  tools.py  webTools.py
plugin/data/OlivOSAIChatAssassin/: skill_translation_cache.json
