[build-system]
requires = ["setuptools>=63.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olivos-plugin-OlivOSAIChatAssassin"
version = "1.4.4"
description = "基于OpenAI兼容API的群聊AI助手，会收集聊天记录并择机加入群聊"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "仑质"}
]
license = {text = "AGPLv3 License"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "olivos",
    "requests",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "PyYAML>=6.0",
    "translators>=6.0.4",
    "openai>=1.0",
    "ddgs>=7.0",
]

[tool.setuptools.packages.find]
include = ["OlivOSAIChatAssassin*"]

[project.urls]
Repository = "https://github.com/lunzhiPenxil/OlivOSAIChatAssassin"
Issues = "https://github.com/lunzhiPenxil/OlivOSAIChatAssassin/issues"
